--- a/index.html
+++ b/index.html
@@ -107,8 +107,8 @@
         <button id="showSection" class="rowsub btn btn-primary">Click here to signin</button>
 
       </div>
-      <iframe id="iframe" src="https://verify-2041-uudarv.twil.io/index.html"
-        title="W3Schools Free Online Web Tutorials" height="600" width="100%"></iframe>
+      <!-- <iframe id="iframe" src="https://verify-2041-uudarv.twil.io/index.html"
+        title="W3Schools Free Online Web Tutorials" height="600" width="100%"></iframe> -->
       <!-- Remove the iframe -->
     </div>
     <!-- Signin / Signup section ends -->
